--- a/styles.css
+++ b/styles.css
@@ -64,3 +64,26 @@ html {
     margin: auto;
     background-color: white;
 }
+.contactContainer {
+    /* position: relative;
+    text-align: center;
+    color: white; */
+     /* The image used */
+     background-image: url("images/concrete-wallpapers.jpg");
+
+     /* Set a specific height */
+     min-height: 300px;
+ 
+     /* Create the parallax scrolling effect */
+     background-attachment: fixed;
+     background-position: center;
+     background-repeat: no-repeat;
+     background-size: cover;
+  }
+  /* Centered text */
+/* .centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  } */
