--- a/styles.css
+++ b/styles.css
@@ -96,3 +96,14 @@ html {
     margin: auto;
     width: 70%;
 }
+
+.padding {
+    padding: 20px;
+}
+
+.title {
+    text-align: center;
+    width: 100%;
+    background-color: #BCBCBC;
+    color: white;
+}
