centered the image

--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ html {
 
 .parallax1 {
     /* The image used */
-    background-image: url("images/girlLifting.jpg");
+    background-image: url("images/concrete-wallpapers.jpg");
     /* Set a specific height */
     min-height: 500px;
     /* Create the parallax scrolling effect */
